chg: Push an image tagged with the branch name

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -5,9 +5,9 @@ ENV PATH /opt/google-cloud-sdk/bin:$PATH
 
 USER root
 
-RUN apt-get update -y
-RUN apt-get install -y jq
-RUN curl https://sdk.cloud.google.com | bash && mv /root/google-cloud-sdk /opt
-RUN curl -fsSL https://get.docker.com/ | sh
-RUN gcloud components install kubectl
+RUN apt-get update -y && \
+    apt-get install -y jq && \
+    curl https://sdk.cloud.google.com | bash && mv /root/google-cloud-sdk /opt && \
+    curl -fsSL https://get.docker.com/ | sh && \
+    gcloud components install kubectl
 
