--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,5 +4,5 @@ ENV CLOUDSDK_CORE_DISABLE_PROMPTS 1
 ENV PATH /opt/google-cloud-sdk/bin:$PATH
 
 RUN apk update && apk add curl bash python
-RUN curl https://sdk.cloud.google.com | bash && mv /root/google-cloud-sdk /opt/
+RUN curl https://sdk.cloud.google.com | bash && mkdir /opt && mv /root/google-cloud-sdk /opt
 RUN gcloud components install kubectl
